# sdx

./: .clangd  .cursorignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ADVANCED_OPTIMIZATION_GUIDE.md  AGENTIC_SYSTEMS_SUMMARY.md  CHARACTER_CONSISTENCY_IMPLEMENTATION.md  CLEAN_STRUCTURE.txt  CODEBASE_STRUCTURE.md  COMPLETE_AGENTIC_EXPANSION_SUMMARY.md  COMPLETE_SYSTEM_OVERVIEW.md  CONTRIBUTING.md  DEPRECATIONS.md  IMPLEMENTATION_REPORT.md  IMPROVEMENT_IDEAS.md  INTEGRATION_GUIDE.md  LICENSE  NATIVE_KERNELS_README.md  PROJECT_STRUCTURE.md  README.md  RELEASE_v10_COMPLETE.txt  SECURITY.md  ULTIMATE_AGENTIC_SYSTEM_SUMMARY.md  V10_RELEASE_SUMMARY.md  character_consistency_demo_report.md  cli.py  compile_flags.txt  demo.py  inference.py  pretrained_status.json  pyproject.toml  pyrightconfig.json  requirements-cuda128.txt  requirements-perf.txt  requirements.txt  sample.py  sample_enhanced.py  save_model_checkpoint.py  (+3 more)
.github/: CODE_OF_CONDUCT.md  SECURITY.md  dependabot.yml  pull_request_template.md
ViT/: DIT_NEXTGEN_NOTES.md  EXCELLENCE_VS_DIT.md  README.md  VIT_G_ARCHITECTURE_VISION.md  __init__.py  backbone_presets.py  checkpoint_utils.py  config.py  dataset.py  ema.py  export_embeddings.py  infer.py  losses.py  model.py  prompt_system.py  prompt_tool.py  rank.py  train.py  tta.py
advanced_innovations/: README.md  TESTING_AND_INTEGRATION_REPORT.md  __init__.py  integration.py
assets/: characters.json  styles.json
config/: README.md  __init__.py  ai_image_shortcomings.py  art_mediums.py  model_presets.py  pixai_reference.py  prompt_domains.py  style_artists.py  style_guidance.py  train_config.py
consistency_data/: styles.json
data/: __init__.py  bucket_batch_sampler.py  caption_truncate.py  caption_utils.py  enhanced_dataset.py  t2i_dataset.py  vector_index_sampler.py  video_catalog.json
datasets/: README.md
demo_character_database/: char_6b0466a2.json  char_9b5afacc.json
diffusion/: README.md  __init__.py  adaptive_cfg_scheduler.py  adversarial_distillation.py  attention_steering.py  bridge_training.py  cascaded_multimodal_pipeline.py  cfg_schedulers.py  consistency_utils.py  flow_matching.py  flow_rectified.py  gaussian_diffusion.py  inference_timesteps.py  latent_bridge.py  loss_weighting.py  pixel_perfect.py  respace.py  sampling_utils.py  schedules.py  self_conditioning.py  snr_utils.py  spectral_sfp.py  timestep_loss_weight.py  timestep_sampling.py
docs/: AR.md  ARCHITECTURE_SHIFT_2026.md  AR_EXTENSIONS.md  BLUEPRINTS.md  BOOK_COMIC_TECH.md  BOOK_MODEL_EXCELLENCE.md  CANONICAL_STRUCTURE.md  CIVITAI_QUALITY_TIPS.md  CODEBASE.md  CODEBASE_GUIDE.md  CODEBASE_ORGANIZATION.md  COMMON_ISSUES.md  COMMON_SHORTCOMINGS_AI_IMAGES.md  CONNECTIONS.md  CONSISTENCY_FLOW_SPEED_BLUEPRINT.md  DANBOORU_HF.md  DIFFUSION_LEVERAGE_ROADMAP.md  DOMAINS.md  ENHANCED_FEATURES.md  FILES.md  GENERATION_DIAGRAM.md  GETTING_STARTED.md  HARDWARE.md  HF_DATASET_SHORTLIST.md  HOLY_GRAIL_OVERVIEW.md  HOW_GENERATION_WORKS.md  IMPROVEMENTS.md  INSPIRATION.md  LANDSCAPE_2026.md  MODEL_ENHANCEMENTS.md  MODEL_STACK.md  MODEL_WEAKNESSES.md  MODERN_DIFFUSION.md  NATIVE_AND_SYSTEM_LIBS.md  NEXTGEN_SUPERMODEL_ARCHITECTURE.md  PROMPT_ACCURACY_BLUEPRINT.md  PROMPT_COOKBOOK.md  PROMPT_STACK.md  QUALITY.md  QUALITY_AND_ISSUES.md  (+13 more)
examples/: __init__.py  book_visual_memory.example.json  box_layout.example.json  box_layout_sketch.example.json  eval_prompts_baseline.json  example_character_consistency.py  example_style_harmonization.py  moodboard.example.json  multi_character_scene.example.json  prompt_layout.example.json  prompt_layout_group_mansion_nsfw.json  run_baseline_eval.py  scene.example.json  scene_continuity.example.json  scene_frontier.example.json  scene_i2v_control.example.json  scene_studio.example.json  scene_tier1.example.json  style_references.example.json  video_plan.example.json
frontier/: README.md  __init__.py  engine.py  hooks.py  imagination.py  perfect.py  registry.py  subject.py  synthesis.py
holy_grail/: README.md
innovations/: INNOVATION_GUIDE.md  README.md  TESTING_AND_INTEGRATION_REPORT.md  __init__.py  pipeline.py  registry.py
models/: __init__.py  anti_ai_naturalness.py  ar_masks_extended.py  attention.py  camera_perspective.py  cascaded_multimodal_diffusion.py  complex_prompt_handler.py  controlnet.py  dit.py  dit_predecessor.py  dit_text.py  dit_text_variants.py  lora.py  (+20 more)
native/cpp/: CMakeLists.txt  README.md
native/cpp/cuda/: README.md  flow_matching_velocity.cu  gaussian_blur_latent.cu  hwc_to_chw.cu  image_metrics.cu  l2_normalize_rows.cu  nf4_dequant.cu  percentile_clamp.cu  rmsnorm_rows.cu  rope_apply.cu  sdpa_online_softmax.cu  silu_gate.cu  style_pick_best.cu
native/cpp/include/: sdx_kernels.h
native/cpp/include/sdx/: beta_schedules.h  flow_matching_velocity.h  fnv64_file.h  gaussian_blur_latent.h  hwc_to_chw.h  image_metrics.h  image_metrics_cuda.h  inference_timesteps.h  l2_normalize_rows.h  latent.h  line_stats.h  mask_ops.h  nf4_dequant.h  percentile_clamp.h  rmsnorm_rows.h  rmsnorm_rows_cpu.h  rope_apply.h  score_ops.h  sdpa_online_softmax.h  silu_gate.h
native/cpp/include/sdx/experimental/: augmentor_plugin.hpp  tensor_lite.hpp  vram_pool_stub.hpp
native/cpp/src/: kernels.cu  sdx_beta_schedules.cpp  sdx_fnv64_file.cpp  sdx_image_metrics.cpp  sdx_inference_timesteps.cpp  sdx_latent.cpp  sdx_line_stats.cpp  sdx_mask_ops.cpp  sdx_rmsnorm_rows_cpu.cpp  sdx_score_ops.cpp
native/rust/: Cargo.toml
native/rust/sdx-diffusion-math/: Cargo.toml
native/rust/sdx-diffusion-math/src/: lib.rs
native/rust/sdx-image-metrics/: Cargo.toml
native/rust/sdx-image-metrics/src/: main.rs
native/rust/sdx-jsonl-tools/: Cargo.toml  README.md
native/rust/sdx-jsonl-tools/.cargo/: config.toml
native/rust/sdx-jsonl-tools/src/: main.rs
native/rust/sdx-noise-schedule/: Cargo.toml  README.md
native/rust/sdx-noise-schedule/.cargo/: config.toml
native/rust/sdx-noise-schedule/src/: main.rs
native/rust/sdx-prompt-ops/: Cargo.toml
native/rust/sdx-prompt-ops/src/: lib.rs
native/rust/src/: advanced.rs  lib.rs  main.rs  py_module.rs
(+1386 files in other folders)
