[project]
name = "sdx"
version = "0.2.0"
description = "Diffusion Transformer text-to-image training and sampling (DiT, T5, optional triple CLIP)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
# Install runtime deps with: pip install -r requirements.txt

[tool.ruff]
target-version = "py38"
line-length = 120
src = [
  "config",
  "data",
  "diffusion",
  "examples",
  "models",
  "native/python",
  "pipelines",
  "scripts",
  "tests",
  "training",
  "utils",
  "ViT",
]
# Optional parallel tree / vendored experiments — not part of default CI; keeps `ruff check .` green.
exclude = ["enhanced_dit", "external", "model", ".git"]

[tool.ruff.lint]
# Keep this set small so `ruff check` stays green on the full tree; tighten over time.
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort (auto-fix with `ruff check --fix`)
]
ignore = [
  "E501",  # line length
]

[tool.ruff.lint.per-file-ignores]
"scripts/**" = ["E402"]  # imports after sys.path tweaks in some tools
"utils/latent_geometry.py" = ["E402", "F403"]
"utils/native_tools.py" = ["E402", "F403"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = [".", "native/python"]
addopts = "-q"
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.10"
pretty = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
check_untyped_defs = true
files = [
  "config/train_config.py",
  "models/lora.py",
  "training/train_args.py",
  "training/train_cli_parser.py",
  "utils/training/part_aware_training.py",
]
