[project]
name = "sdx"
# PEP 440 package version; docs/README brand the line as **v7** (not v7.1 / v7.2).
version = "7.0.0"
description = "Diffusion Transformer text-to-image training and sampling (DiT, T5, optional triple CLIP)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
# Install runtime deps with: pip install -r requirements.txt

[tool.ruff]
target-version = "py38"
line-length = 120
src = [
  "config",
  "data",
  "diffusion",
  "examples",
  "research",
  "models",
  "native/python",
  "pipelines",
  "scripts",
  "training",
  "utils",
  "vit_quality",
]
# Optional parallel tree / vendored experiments - not part of default CI; keeps `ruff check .` green.
exclude = ["enhanced_dit", "external", "model", ".git"]

[tool.ruff.lint]
# Keep this set small so `ruff check` stays green on the full tree; tighten over time.
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort (auto-fix with `ruff check --fix`)
]
ignore = [
  "E501",  # line length
]

[tool.ruff.lint.per-file-ignores]
"scripts/**" = ["E402"]  # imports after sys.path tweaks in some tools
"vit_quality/**" = ["E402"]  # repo-root sys.path bootstrap before utils imports
"native/python/sdx_native/__init__.py" = ["I001"]  # large explicit re-export surface; isort splits combined imports
"utils/latent_geometry.py" = ["E402", "F403"]
"utils/native_tools.py" = ["E402", "F403"]
"utils/native/__init__.py" = ["I001"]  # sys.path bootstrap then star imports

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "native/python"]
addopts = "-v --tb=short"
filterwarnings = [
  # SciPy vs NumPy pin mismatch in some envs - not actionable in this repo.
  "ignore:.*NumPy version.*:UserWarning",
  # Triton autotuner deprecations from transitive deps.
  "ignore:warmup, rep, and use_cuda_graph parameters are deprecated:DeprecationWarning",
]
# Skip GPU tests when CUDA is not available (mark with @pytest.mark.cuda).
markers = [
    "cuda: requires a CUDA GPU (skip with -m 'not cuda')",
    "slow: slow tests skipped by default (run with -m slow)",
]

# Pyright / Pylance / basedpyright: ``sdx_native`` lives under ``native/python`` (also on ``sys.path`` at runtime).
[tool.pyright]
extraPaths = ["native/python", "."]
pythonVersion = "3.10"

[tool.mypy]
python_version = "3.10"
pretty = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
check_untyped_defs = true
files = [
  "config/train_config.py",
  "models/lora.py",
  "training/train_args.py",
  "training/train_cli_parser.py",
  "utils/training/part_aware_training.py",
]
