[package]
name = "sdx-native"
version = "9.0.0"
edition = "2021"
authors = ["Llunarstack"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ndarray = "0.15"
rayon = "1.7"
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bench]]
name = "performance"
harness = false
