[package]
name = "sdx-jsonl-tools"
version = "0.1.0"
edition = "2021"
description = "Fast JSONL manifest validation/stats for SDX training data"
license = "MIT"

[[bin]]
name = "sdx-jsonl-tools"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
md5 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
